--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
     "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.22",
     "prettier": "2.8.8"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
   }
 }
