--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "prettier": "2.8.8"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0"
   }
 }
