--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.3.3",
+    "sequelize": "^6.31.1"
   }
 }
